--- a/config.json
+++ b/config.json
@@ -2,21 +2,21 @@
     "p1_coords": {
         "start": [
             24,
-            28
+            29
         ],
         "end": [
             327,
-            28
+            29
         ]
     },
     "p2_coords": {
         "start": [
             408,
-            28
+            29
         ],
         "end": [
             711,
-            28
+            29
         ]
     },
     "p1_calibration": {
@@ -25,22 +25,34 @@
     "p2_calibration": {
         "max_pixels": 304
     },
-    "color_range": {
+    "p1_color_range": {
         "lower": [
-            83,
+            84,
             126,
             197
         ],
         "upper": [
-            93,
+            94,
             226,
             255
         ]
     },
+    "p2_color_range": {
+        "lower": [
+            84,
+            123,
+            192
+        ],
+        "upper": [
+            94,
+            223,
+            255
+        ]
+    },
     "timer_roi": [
-        334,
-        3,
-        68,
-        50
+        335,
+        4,
+        67,
+        46
     ]
 }
